# algolabra

./: .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7.md
src/: index.py
src/services/: dameraulevenshtein.py  dameraulevenstein.py  string_service.py  trie.py  words.txt
src/tests/: dameraulevenshtein_test.py  string_service_test.py  trie_test.py  trienode_test.py
src/ui/: add_string_view.py  home_view.py  search_string_view.py  ui.py
