[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = ""
authors = ["Inkeri <inkeri.ahlstrom@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.2.0"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.1"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
